--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="main_columns">3</integer>
+    <integer name="addProduct.max.lines">1</integer>
+    <integer name="addProduct.max.name">30</integer>
 </resources>
